Ensure docker service is started and enabled at boot. Task 4.2 completed.

--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -33,3 +33,9 @@
       - containerd.io
       - docker-compose-plugin
     state: present
+
+- name: Ensure docker service is started and enabled
+  ansible.builtin.systemd:
+    name: docker
+    enabled: yes
+    state: started
