--- a/roles/docker/tasks/join-swarm.yml
+++ b/roles/docker/tasks/join-swarm.yml
@@ -1,13 +1,15 @@
+---
 - name: Joining worker to the swarm
   # https://docs.ansible.com/ansible/latest/modules/docker_swarm_module.html
   docker_swarm:
     state: join
     timeout: 60
     # Using PRIVATE IP ADDRESS as they are in the same VPC
-    advertise_addr: {{ ansible_default_ipv4.address|default(ansible_all_ipv4_addresses[0]) }}
+    advertise_addr:
+      { { ansible_default_ipv4.address|default(ansible_all_ipv4_addresses) } }
 
     # hostvars contains all variables related to a host
     # https://docs.ansible.com/ansible/latest/user_guide/playbooks_variables.html#accessing-information-about-other-hosts-with-magic-variables
-    join_token: {{ hostvars[riker].join_token_worker }}
+    join_token: { { hostvars.riker.join_token_worker } }
     # Using PRIVATE IP ADDRESS as they are in the same VPC
     remote_addrs: "{{ list_remote_addrs }}"
